I have had an issue for a while now where Google meet would always crash every time I tried to access it. I didn't realize it for months, but I recently discovered that if I disabled dark mode, this doesn't happen.
So somehow just having dark mode enabled is causing persistent crashes on certain pages. Google meet is the one I have been able to reliably reproduce, so I have included a backtrace from the crash:
Received signal 11 SEGV_MAPERR 000000000000 #0 0x7f998216e845 base::debug::CollectStackTrace() #1 0x7f99820ad5f6 base::debug::StackTrace::StackTrace() #2 0x7f998216ec73 base::debug::(anonymous namespace)::StackDumpSignalHandler() #3 0x7f99934cbd60 (/nix/store/1nyg1fvhpz8bx3vn3r9f18zhra2rpbx9-glibc-2.37-8/lib/libc.so.6+0x38d5f) #4 0x7f997e9299eb QtWebEngineCore::RenderWidgetHostViewQt::UpdateBackgroundColor() #5 0x7f998101f4ad content::PageImpl::DidChangeBackgroundColor() #6 0x7f99805ddf29 blink::mojom::LocalFrameHostStubDispatch::Accept() #7 0x7f99829b213b mojo::InterfaceEndpointClient::HandleValidatedMessage() #8 0x7f99829b3143 mojo::MessageDispatcher::Accept() #9 0x7f99829b1b5a mojo::InterfaceEndpointClient::HandleIncomingMessage() #10 0x7f9982be8952 IPC::(anonymous namespace)::ChannelAssociatedGroupController::AcceptOnEndpointThread() #11 0x7f9982be3cb9 base::internal::Invoker<>::RunOnce() #12 0x7f998211e92a base::TaskAnnotator::RunTaskImpl() #13 0x7f998213d22e base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWorkImpl() #14 0x7f998213dde7 base::sequence_manager::internal::ThreadControllerWithMessagePumpImpl::DoWork() #15 0x7f997e89d0be QtWebEngineCore::MessagePumpForUIQt::handleScheduledWork() #16 0x7f999227142d QObject::event() #17 0x7f998e505ca1 QApplicationPrivate::notify_helper() #18 0x7f998ee63c7e sipQApplication::notify() #19 0x7f9992220328 QCoreApplication::notifyInternal2() #20 0x7f99922237f0 QCoreApplicationPrivate::sendPostedEvents() #21 0x7f99924aa793 postEventSourceDispatch() #22 0x7f998fab5dbd g_main_context_dispatch #23 0x7f998fab6068 g_main_context_iterate.constprop.0 #24 0x7f998fab60fc g_main_context_iteration #25 0x7f99924aa16c QEventDispatcherGlib::processEvents() #26 0x7f999222c4d3 QEventLoop::exec() #27 0x7f99922287b8 QCoreApplication::exec() #28 0x7f998ee62adb meth_QApplication_exec #29 0x7f9993a0a0e7 cfunction_call #30 0x7f99938c4930 _PyObject_MakeTpCall.localalias #31 0x7f9993803c29 call_function #32 0x7f999380a39b _PyEval_EvalFrameDefault #33 0x7f999394c206 _PyEval_Vector #34 0x7f9993803c78 call_function #35 0x7f9993808221 _PyEval_EvalFrameDefault #36 0x7f999394c206 _PyEval_Vector #37 0x7f9993803c78 call_function #38 0x7f999380a39b _PyEval_EvalFrameDefault #39 0x7f999394c206 _PyEval_Vector #40 0x7f9993803c78 call_function #41 0x7f9993808221 _PyEval_EvalFrameDefault #42 0x7f999394c206 _PyEval_Vector #43 0x7f9993953f8f PyEval_EvalCode.localalias #44 0x7f9993a4b040 run_mod #45 0x7f9993a53906 _PyRun_SimpleFileObject.localalias #46 0x7f9993a54121 _PyRun_AnyFileObject.localalias #47 0x7f9993a5926a Py_RunMain.localalias #48 0x7f99934b6ace __libc_start_call_main #49 0x7f99934b6b89 __libc_start_main_alias_2 #50 0x000000401075 _start r8: 0000000000000007 r9: 0000000004df1180 r10: 46958d502efee5a0 r11: 00000000033a1430 r12: 00000000ff121212 r13: 00000000ff121212 r14: 0000000004acd9f0 r15: 00007ffdfe732560 di: 0000000000000000 si: 00000000ff121212 bp: 00007ffdfe731a60 bx: 00007f9944047c90 dx: 0000000000000012 ax: 00000000ff121212 cx: 00000000ff121212 sp: 00007ffdfe731a30 ip: 00007f997e9299eb efl: 0000000000010a07 cgf: 002b000000000033 erf: 0000000000000004 trp: 000000000000000e msk: 0000000000000000 cr2: 0000000000000000 [end of stack trace]