Fix crash on Google Meet when dark mode is enabled

Extensions can use offscreen views to perform background tasks or
isolate script contexts. Avoid access of non-existing Qt delegate
by early return.

Task-number: QTBUG-113369
Change-Id: I361df0afc0da30c1a013380e1c97973153ffbfd3
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
(cherry picked from commit 0548893a182f2896c98ecc252e9811261a08d982)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>