src/core/render_widget_host_view_qt.cpp
@@ -367,6 +367,9 @@ gfx::Rect RenderWidgetHostViewQt::GetViewBounds()
 
 void RenderWidgetHostViewQt::UpdateBackgroundColor()
 {
+    if (!m_delegate)
+        return;
+
     DCHECK(GetBackgroundColor());
     SkColor color = *GetBackgroundColor();
 
